# PLC_Solver

./: .gitignore
backend/: CMakeLists.txt  package-lock.json  package.json  server.js
backend/src/: main.cpp
backend/src/algoritmos/: LadderGenerator.cpp  LadderGenerator.h  QuineMcCluskey.cpp  QuineMcCluskey.h
backend/src/api/: OptimizacionHandler.cpp  OptimizacionHandler.h  Server.cpp  Server.h
backend/src/modelos/: Implicante.cpp  Implicante.h  Termino.cpp  Termino.h
frontend/public/: index.html
frontend/public/css/: styles.css
frontend/public/js/: app.js  conditions.js  inputTable.js  ladderDiagram.js  outputTable.js
